--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "express": "^4.10.2"
   },
   "devDependencies": {
+    "agile": "0.0.2",
     "istanbul": "^0.3.2",
     "mocha": "^1.21.5",
     "should": "^4.1.0",
     "sinon": "^1.10.3"
   },
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -u exports test/dynamose"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -u exports test/*"
   },
   "license": "MIT"
 }
