--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doqmentdb",
   "description": "A Promise-Based DocumentDB Client",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "filename": "index.js",
   "main": "index.js",
   "homepage": "https://github.com/a8m/doqmentdb",
@@ -19,8 +19,7 @@
   ],
   "dependencies": {
     "bluebird": "^2.3.11",
-    "documentdb": "^0.9.1",
-    "express": "^4.10.2"
+    "documentdb": "^0.9.1"
   },
   "devDependencies": {
     "agile": "0.0.2",
